--- a/InstagramUI-Starter/InstagramUI/Base.lproj/Main.storyboard
+++ b/InstagramUI-Starter/InstagramUI/Base.lproj/Main.storyboard
@@ -64,16 +64,16 @@
             </objects>
             <point key="canvasLocation" x="520.79999999999995" y="-169.56521739130437"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Instagram-->
         <scene sceneID="NU1-eu-YEW">
             <objects>
-                <tableViewController id="Aag-oz-LSO" sceneMemberID="viewController">
+                <tableViewController id="Aag-oz-LSO" customClass="NewsFeedTableViewController" customModule="InstagramUI" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="GUo-r7-YqV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="57" id="QcP-dQ-I1g">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostHeaderCell" rowHeight="57" id="QcP-dQ-I1g" customClass="PostHeaderCell" customModule="InstagramUI" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="57"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QcP-dQ-I1g" id="qRV-02-89h">
@@ -113,8 +113,13 @@
                                         <constraint firstItem="aT4-N9-p8e" firstAttribute="leading" secondItem="ybF-Yl-fWF" secondAttribute="trailing" constant="14" id="loe-UY-cir"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="followButton" destination="fbe-vD-TVo" id="RMN-Zc-fCL"/>
+                                    <outlet property="profileImageView" destination="ybF-Yl-fWF" id="Cmq-4J-jEN"/>
+                                    <outlet property="usernameLabel" destination="aT4-N9-p8e" id="wHt-pN-a5k"/>
+                                </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="578" id="wqv-hi-Jeg">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="578" id="wqv-hi-Jeg" customClass="PostCell" customModule="InstagramUI" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="85" width="375" height="578"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wqv-hi-Jeg" id="CUN-iU-Jc6">
@@ -128,7 +133,7 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="o08-5C-K3o">
-                                            <rect key="frame" x="12" y="387" width="101" height="22.5"/>
+                                            <rect key="frame" x="12" y="387" width="101" height="23"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yjd-Ie-a7f">
                                                     <rect key="frame" x="0.0" y="0.5" width="23" height="22"/>
@@ -166,33 +171,33 @@
                                             </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUJ-qD-KfZ">
-                                            <rect key="frame" x="12" y="421.5" width="351" height="1"/>
+                                            <rect key="frame" x="12" y="422" width="351" height="1"/>
                                             <color key="backgroundColor" red="0.82745098039215681" green="0.83921568627450982" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="Ueq-sQ-4aa"/>
                                             </constraints>
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6f-q6-ndy">
-                                            <rect key="frame" x="12" y="434.5" width="76" height="30"/>
+                                            <rect key="frame" x="12" y="435" width="76" height="30"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <state key="normal" title="♥︎ 15 Likes"/>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P8M-h5-TtH">
-                                            <rect key="frame" x="12" y="472.5" width="351" height="36"/>
-                                            <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                            <rect key="frame" x="12" y="473" width="351" height="36"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tMW-yf-qPf">
-                                            <rect key="frame" x="12" y="516.5" width="261" height="30"/>
+                                            <rect key="frame" x="12" y="517" width="261" height="30"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <state key="normal" title="Be the first one to  leave a comment">
                                                 <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                             </state>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 days ago" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a72-oJ-vAh">
-                                            <rect key="frame" x="12" y="554" width="62" height="15"/>
+                                            <rect key="frame" x="12" y="554.5" width="61.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -219,6 +224,12 @@
                                         <constraint firstItem="Q6f-q6-ndy" firstAttribute="top" secondItem="RUJ-qD-KfZ" secondAttribute="bottom" constant="12" id="yM6-8t-oci"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="numberofLikesButton" destination="Q6f-q6-ndy" id="LU6-LW-FT4"/>
+                                    <outlet property="postCaptionLabel" destination="P8M-h5-TtH" id="g9m-Ax-1nY"/>
+                                    <outlet property="postImageView" destination="ITi-DN-QXq" id="OlC-vN-XEo"/>
+                                    <outlet property="timeAgoLabel" destination="a72-oJ-vAh" id="VYU-Du-EId"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -226,7 +237,7 @@
                             <outlet property="delegate" destination="Aag-oz-LSO" id="Vgn-2Q-g1D"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="VGE-Pq-OBr"/>
+                    <navigationItem key="navigationItem" title="Instagram" id="VGE-Pq-OBr"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="800"/>
                 </tableViewController>
@@ -312,7 +323,7 @@
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oat-bB-Zhx">
                                                     <rect key="frame" x="76" y="12" width="291" height="140"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
